fix(frontend): preserve /api path in nginx proxy_pass

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -36,7 +36,8 @@ server {
     # Proxy API calls to backend service when deployed on cluster
     # Works in Docker Compose network too (service name 'backend')
     location /api/ {
-        proxy_pass http://backend:5000/;
+        # Forward the full original URI to backend (e.g., /api/info -> /api/info)
+        proxy_pass http://backend:5000$request_uri;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
