chore(frontend): use named upstream for backend to avoid 502

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,9 @@
+upstream backend_svc {
+    # OpenShift Service name and port
+    server backend:5000;
+    keepalive 32;
+}
+
 server {
     listen 8080;
     server_name localhost;
@@ -36,8 +42,8 @@ server {
     # Proxy API calls to backend service when deployed on cluster
     # Works in Docker Compose network too (service name 'backend')
     location /api/ {
-        # Forward the full original URI to backend (e.g., /api/info -> /api/info)
-        proxy_pass http://backend:5000$request_uri;
+        # Proxy API calls to the backend Service via named upstream
+        proxy_pass http://backend_svc;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
